--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Zomato Visualizer</title>
 
     <style>
       * {
@@ -29,6 +29,24 @@
 
       body {
         font-family: "Rubik", Helvetica, Arial, sans-serif;
+      }
+
+
+      ::-webkit-scrollbar {
+          width: 1px;
+      }
+ 
+      ::-webkit-scrollbar-track {
+          box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+          -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+          border-radius: 10px;
+          width: 2px;
+      }
+      
+      ::-webkit-scrollbar-thumb {
+          border-radius: 10px;
+          box-shadow: nset 0 0 6px rgba(191,54,12 ,1);
+          -webkit-box-shadow: inset 0 0 6px rgba(191,54,12 ,1); 
       }
     </style>
   </head>
